--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
     <ul>
     <li class="paper-item">
       <span class="year">2024</span>
+      <a href="https://arxiv.org/abs/2505.00624" class="title">
+        FineScope : Precision Pruning for Domain-Specialized Large Language Models Using SAE-Guided Self-Data Cultivation
+      </a>
+      <span class="venue">ArXiv</span>
+    </li>
+    <li class="paper-item">
+      <span class="year">2024</span>
       <a href="https://arxiv.org/abs/2404.01579" class="title">
         Diffusion Deepfake
       </a>
