--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
   <section class="updates">
     <h2>Updates</h2>
     <ul>
-      <li class="update-item">
-        <span class="date">2024-09-01</span>
-        <span class="content">Started PhD program at DGIST-EECS department.</span>
-      </li>
+      <li class="update-item" style="color: #1c76ba;">
+        <span class="date" style="font-weight: bold; color: #b0413e;">2025-05-07</span>
+        <span class="content" style="color: #1c76ba;">CVPR Workshop accepted 🍀 </span>
+      </li>       
   </section>
   
   <section class="papers">
