--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
       <span class="venue">ArXiv</span>
     </li>
     <li class="paper-item">
-      <span class="year">2024</span>
+      <span class="year">2025</span>
       <a href="https://arxiv.org/abs/2404.01579" class="title">
         Diffusion Deepfake
       </a>
-      <span class="venue">ArXiv</span>
+      <span class="venue">CVPRW</span>
     </li>
       <li class="paper-item">
         <span class="year">2024</span>
