--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <ul>
       <li class="update-item" style="color: #1c76ba;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2025-05-07</span>
-        <span class="content" style="color: #1c76ba;">CVPR Workshop accepted 🍀 </span>
+        <span class="content" style="color: #1c76ba;">One paper got accpted in CVPR Workshop 🍀 </span>
       </li>       
   </section>
   
@@ -104,7 +104,7 @@
       <a href="https://arxiv.org/abs/2404.01579" class="title">
         Diffusion Deepfake
       </a>
-      <span class="venue">CVPRW</span>
+      <span class="venue">CVPR-Workshop</span>
     </li>
       <li class="paper-item">
         <span class="year">2024</span>
