--- a/cv.html
+++ b/cv.html
@@ -129,8 +129,9 @@
         </div>
 
         <div class="section">
-            <h2>Journals</h2>
+            <h2>Papers</h2>
             <ul>
+                <li><a href="https://arxiv.org/abs/2404.01579" target="_blank">Diffusion Deepfake</a>CVPR-W</li>
                 <li><a href="https://www.mdpi.com/2076-3417/13/21/11977" target="_blank">Black Ice Classification with Hyperspectral Imaging</a>, Applied Sciences, MDPI</li>
                 <li><a href="https://www.mdpi.com/2076-3417/14/7/2763" target="_blank">EGCY-Net: An ELAN and GhostConv-Based YOLO Network for Stacked Packages in Logistic Systems</a>, Applied Sciences, MDPI</li>
                 <li><a href="https://www.mdpi.com/1424-8220/24/7/2286" target="_blank">S-LIGHT: Synthetic Dataset for Reflection Separation</a>, Sensors, MDPI</li>
