--- a/cv.html
+++ b/cv.html
@@ -88,7 +88,7 @@
         <div class="section">
             <h2>Skills</h2>
             <p><strong>Technical:</strong> Python, C++; PyTorch, TensorFlow, OpenCV, LLMops, Matplotlib, Seaborn, Plotly; Linux, CUDA</p>
-            <p><strong>Research Areas:</strong> LLM, Computer Vision (3D Vision), Efficient AI, Multi-modal Learning, Generative AI</p>
+            <p><strong>Research Areas:</strong> Efficient AI, CV, LLM, Multi-modal Learning, Generative AI</p>
         </div>
 
         <div class="section">
