--- a/cv.html
+++ b/cv.html
@@ -70,7 +70,7 @@
     <section class="cv">
         <h1>Chaitali Bhattacharyya</h1>
         <p class="contact">
-            Download Résumé: <a href="https://drive.google.com/uc?export=download&id=1gwwSBhRRcdBOHnBDJz_cs-oQmk6Umw-s">PDF</a> |
+            Download Résumé: <a href="https://drive.usercontent.google.com/u/0/uc?id=1mQ5CPm6O_eQ7LCsDD_kvQ4IbnrSNxfj6&export=download">PDF</a> |
         </p>
 
         <div class="section">
