Update website contents for blogs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="nav-links">
       <a href="#about">About</a> <!-- Links to the #about section on this page -->
       <a href="cv.html">CV/Résumé</a> <!-- Links to gallery.html -->
-      <a href="https://aizora.github.io/">Blogs</a> <!-- External link -->
+      <a href="aizora/index.html">Blogs</a> <!-- External link -->
       <a href="gallery.html">Gallery</a> <!-- Links to gallery.html -->
     </div>
     <div class="theme-toggle" id="themeToggle">☀️</div>
