--- a/aizora/paper-summary.html
+++ b/aizora/paper-summary.html
@@ -25,6 +25,8 @@
       <li><a href="paper-1.html">P-1: Self-Distillation Bridges Distribution Gap in Language Model Fine-Tuning</a></li>
       <li><a href="paper-2.html">P-2: SelectIT – Selective Instruction Tuning for Large Language Models
         via Uncertainty-Aware Self-Reflection</a></li>
+      <li><a href="paper-3.html">P-3: E2E SAE</a></li>
+      <li><a href="https://chaitalibh.notion.site/DIP-23af41c398a94c89bfc53a95940a816f">P-4: Deep Image Prior</a></li>
     </ul>
   </main>
 </body>
