--- a/aizora/blog.html
+++ b/aizora/blog.html
@@ -24,6 +24,9 @@
     <ul>
       <li><a href="shapley.html">Shapley Value</a></li>
       <li><a href="algorithm.html">Algorithm-based dataset selection</a></li>
+      <li><a href="https://medium.com/@chaitalibh.cb/camera-calibration-with-checkerboard-54f93af742a0"> Camera Calibration</a></li>
+      <li><a href="https://medium.com/@chaitalibh.cb/detailed-and-visual-explanation-convolutional-neural-networks-42c89756f593"> Detailed and Visual explanation: Convolutional Neural Networks </a></li> 
+      
     </ul>
   </main>
 </body>
