--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <ul>
       <li class="update-item" style="color: #1c76ba;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2025-05-07</span>
-        <span class="content" style="color: #1c76ba;">One paper got accepted in CVPR Workshop 🍀🕉️ </span>
+        <span class="content" style="color: #1c76ba;">Diffusion Deepfake got accepted in CVPR-2025 Workshop 🍀🕉️ </span>
       </li>       
   </section>
   
