--- a/aizora/algorithm.html
+++ b/aizora/algorithm.html
@@ -118,5 +118,8 @@ elif args.method == "stochastic_greedy":
 
     <p><strong>For results you can refer to the <a href="https://github.com/cv-chaitali/AlgoData.git">https://github.com/cv-chaitali/AlgoData.git</a></strong></p>
   </main>
+  <footer style="text-align: center; padding: 20px 0;">
+    <p>Made by @aizora</p>
+  </footer>
 </body>
 </html>
