--- a/aizora/blog.html
+++ b/aizora/blog.html
@@ -26,8 +26,15 @@
       <li><a href="algorithm.html">Algorithm-based dataset selection</a></li>
       <li><a href="https://medium.com/@chaitalibh.cb/camera-calibration-with-checkerboard-54f93af742a0"> Camera Calibration</a></li>
       <li><a href="https://medium.com/@chaitalibh.cb/detailed-and-visual-explanation-convolutional-neural-networks-42c89756f593"> Detailed and Visual explanation: Convolutional Neural Networks </a></li> 
+      <li><a href="loss_functions.html"> Loss Functions </a></li> 
       
     </ul>
+    <section>
+      <!-- Add any additional content here -->
+    </section>
   </main>
+  <footer style="text-align: center; padding: 20px 0;">
+    <p>Made by @aizora</p>
+  </footer>
 </body>
 </html>
