--- a/aizora/index.html
+++ b/aizora/index.html
@@ -32,5 +32,8 @@
       </ul>
     </section>
   </main>
+  <footer style="text-align: center; padding: 20px 0;">
+    <p>Made by @bhchaitali</p>
+  </footer>
 </body>
 </html>
