--- a/aizora/paper-2.html
+++ b/aizora/paper-2.html
@@ -136,5 +136,8 @@
     </p>
     <img src="figures/paper_2_result_table.png" alt="Results" style="max-width: 100%; height: auto;">
   </main>
+  <footer style="text-align: center; padding: 20px 0;">
+    <p>Made by @aizora</p>
+  </footer>
 </body>
 </html>
