--- a/aizora/paper-3.html
+++ b/aizora/paper-3.html
@@ -79,7 +79,7 @@
       border-bottom-color: #068b80;
     }
 
-    /* hide sections you’re not using */
+    /* hide sections you're not using */
     .blog-section,
     .blog-post,
     .paper-summary-section {
@@ -108,7 +108,7 @@
     </p>
     <p>
       The key question: <strong>How can we select functionally important features—the ones truly
-      responsible for the network’s behavior?</strong>
+      responsible for the network's behavior?</strong>
     </p>
     <p>
       To answer this, the authors propose training methods that still use a sparsity penalty on the
@@ -121,7 +121,7 @@
     <ul>
       <li>Introduces a novel training objective minimizing KL divergence between original model
         outputs and SAE‐reconstructed outputs.</li>
-      <li>Ensures learned features are tied directly to the model’s functional behavior.</li>
+      <li>Ensures learned features are tied directly to the model's functional behavior.</li>
       <li>Shows E2E SAEs explain more network performance with fewer total and per‐sample features.</li>
       <li>Bridges the gap between interpretability and performance explanation in neural networks.</li>
     </ul>
@@ -141,7 +141,7 @@
     </div>
 
     <h3>☁ Encoder &amp; SAE Part</h3>
-    <p>After extracting each layer’s activation:</p>
+    <p>After extracting each layer's activation:</p>
     <div style="text-align:center; font-size:1.2em; margin:1em 0;">
       \[
         \mathrm{Enc}\bigl(a^{(l)}(x)\bigr)
@@ -202,5 +202,8 @@
       </a>
     </div>
   </main>
+  <footer style="text-align: center; padding: 20px 0;">
+    <p>Made by @aizora</p>
+  </footer>
 </body>
 </html>
