--- a/aizora/paper-summary.html
+++ b/aizora/paper-summary.html
@@ -29,5 +29,8 @@
       <li><a href="https://chaitalibh.notion.site/DIP-23af41c398a94c89bfc53a95940a816f">P-4: Deep Image Prior</a></li>
     </ul>
   </main>
+  <footer style="text-align: center; padding: 20px 0;">
+    <p>Made by @aizora</p>
+  </footer>
 </body>
 </html>
