--- a/aizora/shapley.html
+++ b/aizora/shapley.html
@@ -139,5 +139,8 @@ print("Shapley Values for each region:", shap_values)
     </code></pre>
     <p>Try loading your favorite model and play with the region size!</p>
   </main>
+  <footer style="text-align: center; padding: 20px 0;">
+    <p>Made by @aizora</p>
+  </footer>
 </body>
 </html>
