--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   </section>
   <section class="image-section">
-    <img src="./image.jpg" alt="Korea Street">
+    <img src="image.jpg" alt="Korea Street">
   </section>
 
   <section class="updates">
