--- a/index.html
+++ b/index.html
@@ -6,17 +6,6 @@
   <title>Chaitali Bhattacharyya</title>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    /* basic page-view */
-    gtag('config', 'G-T7CPWZ8SX5', {
-      debug_mode: true   // optional – remove when happy
-    });
-  </script>
 </head>
 <body data-theme="light">
   <nav class="nav">
@@ -88,7 +77,7 @@
 
   </section>
   <section class="image-section">
-    <img src="image.jpg" alt="Korea Street">
+    <img src="./image.jpg" alt="Korea Street">
   </section>
 
   <section class="updates">
@@ -96,7 +85,7 @@
     <ul>
       <li class="update-item" style="color: #1c76ba;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2025-05-07</span>
-        <span class="content" style="color: #1c76ba;">Diffusion Deepfake got accepted in CVPR-2025 Workshop 🍀🕉️ </span>
+        <span class="content" style="color: #1c76ba;">One paper got accpted in CVPR Workshop 🍀🕉️ </span>
       </li>       
   </section>
   
