--- a/aizora/blog.html
+++ b/aizora/blog.html
@@ -10,6 +10,17 @@
   <script>hljs.highlightAll();</script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    /* basic page-view */
+    gtag('config', 'G-XXXXXXXXXX', {
+      debug_mode: true   // optional – remove when happy
+    });
+  </script>
 </head>
 <body>
   <header>
