--- a/aizora/blog.html
+++ b/aizora/blog.html
@@ -17,7 +17,7 @@
     gtag('js', new Date());
 
     /* basic page-view */
-    gtag('config', 'G-XXXXXXXXXX', {
+    gtag('config', 'G-T7CPWZ8SX5', {
       debug_mode: true   // optional – remove when happy
     });
   </script>
