--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <title>Chaitali Bhattacharyya</title>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-T7CPWZ8SX5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    /* basic page-view */
+    gtag('config', 'G-T7CPWZ8SX5', {
+      debug_mode: true   // optional – remove when happy
+    });
+  </script>
 </head>
 <body data-theme="light">
   <nav class="nav">
