--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chaitali Bhattacharyya</title>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-T7CPWZ8SX5"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T7CPWZ8SX5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     /* basic page-view */
@@ -18,6 +20,7 @@
     });
   </script>
 </head>
+
 <body data-theme="light">
   <nav class="nav">
     <div class="nav-links">
@@ -60,31 +63,32 @@
     </div>
     <br>
     <p style="text-align: justify;">
-      I am a <strong>first-year Ph.D. student</strong> in the 
-      <a href="https://www.dgist.ac.kr/en_eecs/" target="_blank">EECS Department</a> 
-      at <a href="https://www.dgist.ac.kr/" target="_blank">DGIST</a>, where I am fortunate to be 
-      supervised by <a href="https://cell.dgist.ac.kr/?page_id=118" target="_blank">Professor Yeseong Kim</a> at 
+      I am a <strong>first-year Ph.D. student</strong> in the
+      <a href="https://www.dgist.ac.kr/en_eecs/" target="_blank">EECS Department</a>
+      at <a href="https://www.dgist.ac.kr/" target="_blank">DGIST</a>, where I am fortunate to be
+      supervised by <a href="https://cell.dgist.ac.kr/?page_id=118" target="_blank">Professor Yeseong Kim</a> at
       <a href="https://cell.dgist.ac.kr" target="_blank">CELL</a>.
-        
-      I completed my <strong>Master’s degree in Electronics Engineering</strong> as a 
-      <strong>Global Korea Scholar (2021)</strong> at 
-      <a href="https://www.yu.ac.kr/english/index.do" target="_blank">Yeungnam University</a>, 
-      under the guidance of 
+
+      I completed my <strong>Master’s degree in Electronics Engineering</strong> as a
+      <strong>Global Korea Scholar (2021)</strong> at
+      <a href="https://www.yu.ac.kr/english/index.do" target="_blank">Yeungnam University</a>,
+      under the guidance of
       <a href="https://avilabyu.wixsite.com/avil/professor" target="_blank">Professor Kim Sungho</a>
       where I worked on <strong>Computer Vision and AI</strong>. I learnt Korean
-      for an year at <a href="https://wwwk.kangwon.ac.kr/english/index.do" target="_blank">Kangwon National University</a> under the same scholarship.
+      for an year at <a href="https://wwwk.kangwon.ac.kr/english/index.do" target="_blank">Kangwon National
+        University</a> under the same scholarship.
     </p>
     <p style="text-align: justify;">
-      I have also had the opportunity to work on <strong>Deepfake research</strong> during an internship 
+      I have also had the opportunity to work on <strong>Deepfake research</strong> during an internship
       with <a href="https://x-up-lab.github.io" target="_blank">Professor Xiatian Zhu (University of Surrey)</a>.
     </p>
     <p style="text-align: justify;">
-      I got my <strong>Bachelor’s degree</strong> from Narula Institute of Technology and have 
-      explored <strong>geosciences, biomedical engineering, and automation</strong> through various 
-      research experiences. I also had the privilege of interning at <strong>DRDO, DRL</strong>, 
+      I got my <strong>Bachelor’s degree</strong> from Narula Institute of Technology and have
+      explored <strong>geosciences, biomedical engineering, and automation</strong> through various
+      research experiences. I also had the privilege of interning at <strong>DRDO, DRL</strong>,
       under <strong>Scientist Dhiraj Dutta</strong>.
 
-    <hr class="profile-line"> <!-- Line added here -->
+      <hr class="profile-line"> <!-- Line added here -->
 
   </section>
   <section class="image-section">
@@ -96,27 +100,28 @@
     <ul>
       <li class="update-item" style="color: #1c76ba;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2025-05-07</span>
-        <span class="content" style="color: #1c76ba;">Diffusion Deepfake got accepted in CVPR Workshop 🍀🕉️ </span>
-      </li>       
+        <span class="content" style="color: #1c76ba;"> Joining POSTECH-EE as a PhD student 🍀🕉️ </span>
+      </li>
   </section>
-  
+
   <section class="papers">
     <h2>Papers</h2>
     <ul>
-    <li class="paper-item">
-      <span class="year">2025</span>
-      <a href="https://arxiv.org/abs/2505.00624" class="title">
-        FineScope : Precision Pruning for Domain-Specialized Large Language Models Using SAE-Guided Self-Data Cultivation
-      </a>
-      <span class="venue">ArXiv</span>
-    </li>
-    <li class="paper-item">
-      <span class="year">2025</span>
-      <a href="https://arxiv.org/abs/2404.01579" class="title">
-        Diffusion Deepfake
-      </a>
-      <span class="venue">CVPR-Workshop</span>
-    </li>
+      <li class="paper-item">
+        <span class="year">2025</span>
+        <a href="https://arxiv.org/abs/2505.00624" class="title">
+          FineScope : Precision Pruning for Domain-Specialized Large Language Models Using SAE-Guided Self-Data
+          Cultivation
+        </a>
+        <span class="venue">ArXiv</span>
+      </li>
+      <li class="paper-item">
+        <span class="year">2025</span>
+        <a href="https://arxiv.org/abs/2404.01579" class="title">
+          Diffusion Deepfake
+        </a>
+        <span class="venue">CVPR-Workshop</span>
+      </li>
       <li class="paper-item">
         <span class="year">2024</span>
         <a href="https://www.mdpi.com/1424-8220/24/7/2286" class="title">
@@ -140,7 +145,7 @@
       </li>
     </ul>
   </section>
-  
+
   <section class="projects">
     <h2>Project Pages</h2>
     <ul>
@@ -152,7 +157,7 @@
           <a href="https://x-up-lab.github.io/research/diffusion_deepfake/" class="project-link">View Project</a>
         </div>
       </li>
-      
+
       <!-- <li class="project-item">
         <img src="https://your-image-path/image-classification.jpg" alt="Image Classification System" class="project-image">
         <div class="project-content">
@@ -163,16 +168,17 @@
       </li>
     </ul> -->
   </section>
-  
-  
+
+
 
   <footer>© 2025 Chaitali</footer>
 
-<script>
+  <script>
     document.getElementById('themeToggle').addEventListener('click', function () {
       document.body.dataset.theme = document.body.dataset.theme === 'light' ? 'dark' : 'light';
       this.textContent = document.body.dataset.theme === 'light' ? '☀️' : '🌙';
     });
   </script>
 </body>
+
 </html>
