--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     </div>
     <br>
     <p style="text-align: justify;">
-      I am a <strong>first-year Ph.D. student</strong> in the
-      <a href="https://www.dgist.ac.kr/en_eecs/" target="_blank">EECS Department</a>
-      at <a href="https://www.dgist.ac.kr/" target="_blank">DGIST</a>, where I am fortunate to be
-      supervised by <a href="https://cell.dgist.ac.kr/?page_id=118" target="_blank">Professor Yeseong Kim</a> at
-      <a href="https://cell.dgist.ac.kr" target="_blank">CELL</a>.
+    I am a <strong>incoming Ph.D. student (2026)</strong> in the
+    <a href="https://ee.postech.ac.kr/" target="_blank">EE Department</a>
+    at <a href="https://www.postech.ac.kr/" target="_blank">POSTECH</a>,  where I am fortunate to be
+          supervised by <a href="https://cell.dgist.ac.kr/?page_id=118" target="_blank">Professor Yeseong Kim</a> at
+      <a href="https://cell.dgist.ac.kr" target="_blank">CELL</a>. 
 
       I completed my <strong>Master’s degree in Electronics Engineering</strong> as a
       <strong>Global Korea Scholar (2021)</strong> at
@@ -99,8 +99,8 @@
     <h2>Updates</h2>
     <ul>
       <li class="update-item" style="color: #1c76ba;">
-        <span class="date" style="font-weight: bold; color: #b0413e;">2025-05-07</span>
-        <span class="content" style="color: #1c76ba;"> Joining POSTECH-EE as a PhD student 🍀🕉️ </span>
+        <span class="date" style="font-weight: bold; color: #b0413e;">2026-01-07</span>
+        <span class="content" style="color: #1c76ba;"> Will be joining POSTECH-EE as a PhD student 🍀🕉️ </span>
       </li>
   </section>
 
@@ -171,7 +171,7 @@
 
 
 
-  <footer>© 2025 Chaitali</footer>
+  <footer>© Chaitali</footer>
 
   <script>
     document.getElementById('themeToggle').addEventListener('click', function () {
