--- a/index.html
+++ b/index.html
@@ -117,12 +117,20 @@
         <span class="content" style="color: #1c76ba;">Graduated from Yeungnam University</span>
       </li>
       <li class="update-item" data-category="archive" style="color: #1c76ba; display: none;">
+        <span class="date" style="font-weight: bold; color: #b0413e;">2024-04-23</span>
+        <span class="content" style="color: #1c76ba;">One paper got accepted in Sensors (Co-aurhor)</span>
+      </li>
+      <li class="update-item" data-category="archive" style="color: #1c76ba; display: none;">
+        <span class="date" style="font-weight: bold; color: #b0413e;">2024-03-26</span>
+        <span class="content" style="color: #1c76ba;">One paper got accepted in Applied Sciences (Co-aurhor)</span>
+      </li>
+      <li class="update-item" data-category="archive" style="color: #1c76ba; display: none;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2023-12-15</span>
         <span class="content" style="color: #1c76ba;">Started research internship @UP-Lab, University of Surrey</span>
       </li>
       <li class="update-item" data-category="archive" style="color: #1c76ba; display: none;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2023-09-31</span>
-        <span class="content" style="color: #1c76ba;">One paper got accepted in Applied Sciences</span>
+        <span class="content" style="color: #1c76ba;">One paper got accepted in Applied Sciences (1st-aurhor)</span>
       </li>
       <li class="update-item" data-category="archive" style="color: #1c76ba; display: none;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2022-09-01</span>
