--- a/aizora/index.html
+++ b/aizora/index.html
@@ -28,11 +28,11 @@
       <p>About me</p>
       <ul>
         <li>Occupation: PhD <strong>student</strong></li>
-        <li>Hobby: Cooking,Photography and learning new things.</li>
+        <li>Hobby: Cooking, Photography and learning new things.</li>
       </ul>
     </section>
   </main>
-  <footer style="text-align: center; padding: 20px 0;">
+  <footer>
     <p>Made by @bhchaitali</p>
   </footer>
 </body>
