--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     </div>
     <br>
     <p style="text-align: justify;">
-    I am an <strong>incoming Ph.D. student (2026)</strong> in the
+    I am an <strong>1st year Ph.D. student (2026)</strong> in the
     <a href="https://ee.postech.ac.kr/" target="_blank">EE Department</a>
     at <a href="https://www.postech.ac.kr/" target="_blank">POSTECH</a>,  where I am fortunate to be
           supervised by <a href="https://cell.dgist.ac.kr/?page_id=118" target="_blank">Professor Yeseong Kim</a> at
-      <a href="https://cell.dgist.ac.kr" target="_blank">CELL</a>. 
+      <a href="https://cell.dgist.ac.kr" target="_blank">CELL</a>.  
 
       I completed my <strong>Master’s degree in Electronics Engineering</strong> as a
       <strong>Global Korea Scholar (2021)</strong> at
@@ -106,7 +106,7 @@
     <ul id="updatesList">
       <li class="update-item" data-category="latest" style="color: #1c76ba;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2026-01-07</span>
-        <span class="content" style="color: #1c76ba;">Will be joining POSTECH-EE as a PhD student 🍀🕉️</span>
+        <span class="content" style="color: #1c76ba;"> Transferring to POSTECH-EE as a PhD student 🍀🕉️</span>
       </li>
       <li class="update-item" data-category="archive" style="color: #1c76ba; display: none;">
         <span class="date" style="font-weight: bold; color: #b0413e;">2025-05-01</span>
