--- a/cv.html
+++ b/cv.html
@@ -75,8 +75,10 @@
 
         <div class="section">
             <h2>Education</h2>
+            <p><strong>PhD in Electrical Engineering</strong></p>
+            <p>POSTECH, Pohang, South Korea, 2026 – Present</p>
             <p><strong>PhD in Electrical Engineering and Computer Science</strong></p>
-            <p>DGIST, Daegu, South Korea, 2024 – Present</p>
+            <p>DGIST, Daegu, South Korea, 2024 – 2025</p>
             <p><strong>Master of Electronics Engineering</strong></p>
             <p>Yeungnam University, Daegu, South Korea, 2022 – 2024</p>
             <p><strong>Korean Language</strong></p>
