--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <br>
     <p style="text-align: justify;">
-    I am an <strong>1st year Ph.D. student (2026)</strong> in the
+    I am a <strong>1st year Ph.D. student (2026)</strong> in the
     <a href="https://ee.postech.ac.kr/" target="_blank">EE Department</a>
     at <a href="https://www.postech.ac.kr/" target="_blank">POSTECH</a>,  where I am fortunate to be
           supervised by <a href="https://cell.dgist.ac.kr/?page_id=118" target="_blank">Professor Yeseong Kim</a> at
