Update website: Add conference timeline, revamp gallery, and enhance UI

--- a/cv.html
+++ b/cv.html
@@ -162,6 +162,8 @@
         </div>
     </section>
 
+    <a href="timeline.html" class="floating-timeline-btn">Tracking Conference Timeline</a>
+
     <footer>© 2025 Chaitali</footer>
 
     <script>
