Update email address in contact section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     /* basic page-view */
     gtag('config', 'G-T7CPWZ8SX5', {
-      debug_mode: true   // optional – remove when happy
+      debug_mode: true  
     });
   </script>
 </head>
@@ -43,7 +43,7 @@
     <a href="https://www.linkedin.com/in/chaitaliynu/" target="_blank" class="social-icon linkedin">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn">
     </a>
-    <a href="mailto:bhchaitali@edu.dgist.ac.kr" class="social-icon mail">
+    <a href="mailto:bhchaitali@postech.ac.kr" class="social-icon mail">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/gmail.svg" alt="Email">
     </a>
     <a href="https://x.com/bhchaitali" target="_blank" class="social-icon twitter">
