--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     I am a <strong>1st year Ph.D. student (2026)</strong> in the
     <a href="https://ee.postech.ac.kr/" target="_blank">EE Department</a>
     at <a href="https://www.postech.ac.kr/" target="_blank">POSTECH</a>,  where I am fortunate to be
-          supervised by <a href="https://cell.dgist.ac.kr/?page_id=118" target="_blank">Professor Yeseong Kim</a> at
+          supervised by <a href="https://cell.postech.ac.kr/?page_id=118" target="_blank">Professor Yeseong Kim</a> at
       <a href="https://cell.dgist.ac.kr" target="_blank">CELL</a>.  
 
       I completed my <strong>Master’s degree in Electronics Engineering</strong> as a
