Comment out timeline link in index.html
Comment out the link to the conference timeline.

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
   <footer>© Chaitali</footer>
 
-  <a href="timeline.html" class="floating-timeline-btn">Tracking Conference Timeline</a>
+  <!-- <a href="timeline.html" class="floating-timeline-btn">Tracking Conference Timeline</a> -->
 
   <script>
     // Theme toggle
